@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri May  3 13:06:21 2002 -->
+<!-- Fri May  3 13:39:13 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -188,8 +188,8 @@ dependency check using the <em>--nodeps</em> option to RPM:
 
 <blockquote><pre>
 
-# rpm --nodeps -tb tmda-0.01.tgz 
-# rpm --nodeps -Uvh /usr/src/redhat/RPMS/noarch/tmda-0.01-1.noarch.rpm
+# rpm -tb --nodeps tmda-0.01.tgz
+# rpm -Uvh --nodeps /usr/src/redhat/RPMS/noarch/tmda-0.01-1.noarch.rpm
 
 </pre></blockquote>
 
